test/type/fail/field_assign_non_class_expr.j
class A {
  Void main() {
    Int a;
    a = ("a").a;
  }
}
